# constants

plonky2-sha256/: Cargo.toml  README.md
plonky2-sha256/circom/circuits/: constants.circom  gates.circom
plonky2-sha256/circom/test/data/: conf1.json  proof1.json  proof2.json
plonky2-sha256/src/: lib.rs  main.rs  split_base.rs  verifier.rs
plonky2/ecdsa/: Cargo.toml
plonky2/ecdsa/src/curve/: curve_types.rs  secp256k1.rs
plonky2/ecdsa/src/gadgets/: nonnative.rs
plonky2/evm/src/generation/: mpt.rs
plonky2/field/src/: goldilocks_extensions.rs  goldilocks_field.rs  secp256k1_base.rs  secp256k1_scalar.rs  types.rs
plonky2/field/src/extension/: mod.rs  quadratic.rs  quartic.rs  quintic.rs
plonky2/insertion/src/: insertion_gate.rs
plonky2/plonky2/: Cargo.toml
plonky2/plonky2/src/fri/: oracle.rs  proof.rs
plonky2/plonky2/src/gadgets/: arithmetic.rs  split_base.rs
plonky2/plonky2/src/gates/: base_sum.rs  exponentiation.rs  high_degree_interpolation.rs  low_degree_interpolation.rs  poseidon.rs  random_access.rs  reducing.rs  reducing_extension.rs
plonky2/plonky2/src/iop/: generator.rs
plonky2/plonky2/src/plonk/: circuit_builder.rs  circuit_data.rs  prover.rs
plonky2/plonky2/src/recursion/: dummy_circuit.rs
plonky2/u32/src/gadgets/: arithmetic_u32.rs
plonky2/u32/src/gates/: add_many_u32.rs  arithmetic_u32.rs  comparison.rs  range_check_u32.rs  subtraction_u32.rs
plonky2/waksman/src/gates/: assert_le.rs  switch.rs
