[package]
	edition = "2021"
	name    = "plonky2_sha256"
	version = "0.1.0"

	# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
	anyhow               = "1.0.65"
	base64               = "0.13.0"
	env_logger           = "0.10.0"
	itertools            = "0.10.0"
	keccak-hash          = "0.10.0"
	log                  = "0.4.17"
	num                  = { version = "0.4", features = [ "rand" ] }
	plonky2              = { git = "https://github.com/polymerdao/plonky2", rev = "4cb0b48df1d227d5461a4c28ed025aaea64e2e62" }
	plonky2_field        = { git = "https://github.com/polymerdao/plonky2", rev = "4cb0b48df1d227d5461a4c28ed025aaea64e2e62" }
	plonky2_u32          = { git = "https://github.com/polymerdao/plonky2", rev = "4cb0b48df1d227d5461a4c28ed025aaea64e2e62" }
	plonky2_util         = { git = "https://github.com/polymerdao/plonky2", rev = "4cb0b48df1d227d5461a4c28ed025aaea64e2e62" }
	poseidon-permutation = { path = "../poseidon-permutation-rs" }
	rand                 = "0.8.4"
	serde                = "1.0.145"
	serde_json           = "1.0.86"
	sha2                 = "0.10"

[profile.release]
	opt-level = 3

[profile.bench]
	opt-level = 3

[profile.test]
	opt-level = 1
